optimize images and add meta description

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Discover the work of Steven Reddy, a passionate web developer transitioning from a culinary career. Explore his portfolio showcasing projects in HTML, CSS, JavaScript, and React, reflecting his adaptability, attention to detail, and commitment to crafting exceptional digital experiences.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap"
