Adding preload to mainImage and fetch priority low on project images

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
+
+  <!-- preload large image -->
+  <link rel="stylesheet" href="src/styles/mainImage.css">
+  <link rel="preload" fetchpriority="high" as="image" href="images/selfimage.webp" type="image/webp">
+
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <title>Steven Reddy</title>
 </head>
